[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=2]
[ext_resource path="res://Scene/LinhaChegada.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Jogo.gd" type="Script" id=4]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=5]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=7]
[ext_resource path="res://Scene/HUD.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Pista" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="LinhaChegada" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 64 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 650, 98 )

[node name="TimerCarrosRapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLento" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioTema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioPonto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioVitoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 8 )]

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="timeout" from="TimerCarrosRapido" to="." method="_on_TimerCarrosRapido_timeout"]
[connection signal="timeout" from="TimerCarrosLento" to="." method="_on_TimerCarrosLento_timeout"]
[connection signal="reinicia" from="HUD" to="." method="_on_HUD_reinicia"]
[connection signal="tempoAcabou" from="HUD" to="." method="_on_HUD_tempoAcabou"]
